basic layout there, more work needed

--- a/cinema-ui/src/app/app.component.html
+++ b/cinema-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <img id="headerLogo" src="../assets/logo/QA-logo.jpg" />
+    <h1 style="font-size:2.5em">QA Cinemas</h1>
   </mat-toolbar-row>
   <mat-toolbar-row>
     <mat-card-content>
@@ -49,7 +49,47 @@
 
 
 <mat-toolbar id="footer">
-  <mat-card-content>
-    <button mat-button><i class="fas fa-ticket-alt"></i>Booking</button>
-  </mat-card-content>
+  <ul>
+    <li>
+      <a href="url">Home</a>
+    </li>
+    <li>
+      <a href="url">Currently Showing</a>
+    </li>
+    <li>
+      <a href="url">Coming Soon</a>
+    </li>
+    <li>
+      <a href="url">Message Board</a>
+    </li>
+  </ul>
+  <ul>
+    <div>
+      <a href="url">Opening Times</a>
+    </div>
+    <li>
+      <a href="url">Classifications</a>
+    </li>
+    <li>
+      <a href="url">Screens</a>
+    </li>
+    <li>
+      <a href="url">Ticket Booking</a>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <a href="url">Contact Us</a>
+    </li>
+    <li>
+      <a href="url">The Local Area</a>
+    </li>
+    <li>
+      <a href="url">Find Us</a>
+    </li>
+    <li>
+      <a href="url">About Us</a>
+    </li>
+  </ul>
+
 </mat-toolbar>
