--- a/cinema-ui/src/app/app.component.html
+++ b/cinema-ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <mat-toolbar-row>
+  <mat-toolbar-row id="header">
     <h1 style="font-size:2.5em">QA Cinemas</h1>
   </mat-toolbar-row>
   <mat-toolbar-row>
@@ -64,9 +64,9 @@
     </li>
   </ul>
   <ul>
-    <div>
+    <li>
       <a href="url">Opening Times</a>
-    </div>
+    </li>
     <li>
       <a href="url">Classifications</a>
     </li>
