--- a/cinema-ui/src/app/app.component.css
+++ b/cinema-ui/src/app/app.component.css
@@ -48,6 +48,12 @@
   background:#6cf;
 }
 
+#body {
+  margin-top: 2%;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
 ul {
   background-color: #6cf;
   padding: 0;
