--- a/cinema-ui/src/app/app.component.html
+++ b/cinema-ui/src/app/app.component.html
@@ -47,7 +47,10 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<router-outlet></router-outlet>
+<div id="body">
+  <router-outlet></router-outlet>
+</div>
+
 <mat-toolbar id="footer">
   <ul>
     <li>
