--- a/cinema-ui/src/app/components/contact/contact.component.html
+++ b/cinema-ui/src/app/components/contact/contact.component.html
@@ -1,41 +1,41 @@
 <h2>Contact Us</h2>
 <br />
 
-<p class="contactHeading">
-  Send a message:
-</p>
-
-
-<form  novalidate #f="ngForm" class="form-full-width">
-  <table>
-    <tr>
-      <td>
-        <mat-form-field class="input-full-width">
-          <input matInput placeholder="Name">
-        </mat-form-field>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <mat-form-field class="input-full-width">
-          <input matInput placeholder="Email">
-        </mat-form-field>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <mat-form-field class="input-full-width">
-          <textarea rows="6" matInput placeholder="Message"></textarea>
-        </mat-form-field>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <button id="messageSaveBtn" mat-raised-button color="primary">Send Message</button>
-      </td>
-    </tr>
-  </table>
-</form>
+<div id="messageForm">
+  <p class="messageHeading">
+    Send a message:
+  </p>
+  <form  novalidate #f="ngForm" class="form-full-width">
+    <table>
+      <tr>
+        <td>
+          <mat-form-field class="input-full-width">
+            <input matInput placeholder="Name">
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <mat-form-field class="input-full-width">
+            <input matInput placeholder="Email">
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <mat-form-field class="input-full-width">
+            <textarea rows="6" matInput placeholder="Message"></textarea>
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <button id="messageSaveBtn" mat-raised-button color="primary">Send Message</button>
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
 
 <br style="clear:both" />
 <br style="clear:both" />
