--- a/cinema-ui/src/app/components/screens/screens.component.html
+++ b/cinema-ui/src/app/components/screens/screens.component.html
@@ -1,3 +1,26 @@
-<p>
-  screens works!
-</p>
+<h2>Screens</h2>
+<div *ngFor="let screen of this.screens">
+  <p class="screenNo">
+    Screen: {{screen.id}}
+  </p>
+  <p class="screenInfo">
+    Type: {{screen.screentype.name}}
+  </p>
+  <p class="screenInfo">
+    Capacity: {{screen.screentype.numberOfSeats}}
+  </p>
+  <span class="seatingPlan">
+    <p>
+      Seating Plan:
+    </p>
+    <img class="screenImg" src="{{screen.screentype.seatingPlan}}" />
+  </span>
+  <span class="decor">
+    <p>
+      Decor
+    </p>
+    <img class="screenImg" src="{{screen.screentype.decor}}" />
+  </span>
+  <br style="clear:both" />
+  <br style="clear:both" />
+</div>
