--- a/cinema-ui/src/app/components/screens/screens.component.css
+++ b/cinema-ui/src/app/components/screens/screens.component.css
@@ -1,4 +1,4 @@
-h2 {
+h2, p {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
@@ -13,11 +13,19 @@ h2 {
 .screenNo {
   font-weight: bold;
   font-size: 1.2em;
+  padding-left: 1%;
 }
 .screenInfo {
   padding-left: 2%;
 }
 .screenImg {
-  width: 80%;
-  height:30em;
+  max-width: 80%;
+  width: 50em;
+  height: auto;
+}
+.divInfo {
+  padding-left: 4%;
+}
+.screenType {
+  padding-bottom: 1%;
 }
