about us page added

--- a/cinema-ui/src/app/components/about-us/about-us.component.html
+++ b/cinema-ui/src/app/components/about-us/about-us.component.html
@@ -1,3 +1,255 @@
-<p>
-  about-us works!
-</p>
+<tabset [justified]="true">
+  <tab heading="About Us" class="t1">
+    <br>
+    <h1>QA Cinema Application</h1>
+
+    Built as a group project in the final two weeks as the culmination of our twelve weeks of training in the QA Consulting Academy.
+    <br><br>
+    <tabset type="pills">
+  <tab heading="Case study">
+    <ul>
+      <li>Our client is a well known cinema chain</li>
+      <li>Your team is building a new website for them. The site will present information about movies, listings, new movies, etc. There are various features the client has deemed “desirable” but not required to go live with the site</li>
+      <li>  There is time for 2 Sprints before the site goes live</li>
+      <li>  The site may be made in any language the team chooses. English, French, Italian, Japanese, or whatever is appropriate to the classroom</li>
+    </ul>
+</tab>
+  <tab heading="Requirements">
+    <ul>
+      <B>The QA Cinemas site needs a home page. The home page shall:</B>
+      <li>Be generally attractive</li>
+      <li>  The page shall be the default for the entire site</li>
+      <li>  Starting from the home page, site users may navigate to other areas of the site</li>
+      <li>  The site should have a picture or graphic evocative of the movies or the cinema on it</li>
+      <li>  Communicate to the viewer the purpose of the site</li>
+  </ul>
+
+ <ul>
+  <B>Listings Gallery</B>
+  <li>The site should include an image gallery posters for the movies currently showing.</li>
+  <li>The gallery is part of the overall site navigation</li>
+  <li>At least 4 different movie images</li>
+  <li>Each image appears on its own page</li>
+  <li>Each image has supporting text including Title, actors, director and showing times</li>
+  </ul>
+
+  <ul>
+  <b>Opening Times</b>
+  <li>The site has a dedicated page to list the opening times.   </li>
+  <li>The page is part of the overall site navigation  </li>
+  <li>The page has details about the opening times of the cinema.  </li>
+  </ul>
+
+  <ul>
+    <b>New Releases Gallery</b>
+    <li>The site should include an image gallery posters for forthcoming movies.</li>
+    <li>The gallery is part of the overall site navigation</li>
+    <li>At least 4 different movie images</li>
+    <li>Each image appears on its own page</li>
+    <li>Each image has supporting text including Title, actors and director</li>
+  </ul>
+  </tab>
+
+  <tab heading="Requirements 2">
+    <ul>
+      <b>Classifications</b>
+      <li>The site has a page dedicated to the film classification system</li>
+      <li>The page is part of the overall site navigation</li>
+      <li>The site answers the following questions and includes any other relevant facts:</li>
+      <li>What are the standard film classifications?</li>
+      <li>What are the rules and conditions relating to each classification?</li>
+      <li>The page may link out to external resources with more detail on individual items</li>
+    </ul>
+
+    <ul>
+      <b>Screens</b>
+      <li>The site has a page dedicated to the screens</li>
+      <li>Include image of the seating plan of the standard screen</li>
+      <li>Include an image showing the décor for the standard screen</li>
+      <li>Include image of the seating plan of the delux “Directors Box” screen</li>
+      <li>Include an image showing the décor for the delux screen</li>
+    </ul>
+
+    <ul>
+      <b>Ticket Bookings</b>
+      <li>The site should include a page dedicated to booking tickets.</li>
+      <li>The page is part of the overall site navigation </li>
+      <li>Booking should include the following information:</li>
+      <li>Movie title</li>
+      <li>Screening date and time</li>
+      <li>Name of booker</li>
+      <li>Number of seats</li>
+      <li>Adult</li>
+      <li>Concession</li>
+      <li>Child</li>
+    </ul>
+
+
+  </tab>
+  <tab heading="Requirements 3">
+    <ul>
+    <b>Places to go</b>
+    <li>The site should include information about local venues where customers can visit before or after the movie.</li>
+    <li>The page is part of the overall site navigation</li>
+    <li>Venues can include bars and restaurants</li>
+    <li>Each venue should include the following information:</li>
+    <li>Image of the venue (inside or out)</li>
+    <li>Description</li>
+    <li>Details of any offers relating to the cinema</li>
+    <li>Contact details</li>
+  </ul>
+
+  <ul>
+    <b>Getting there</b>
+    <li>  The site should include a page dedicated to the location of the cinema.</li>
+    <li>  The page is part of the overall site navigation </li>
+    <li>  Include information on the following, as well as any other interesting and relevant facts</li>
+    <li>  External image of the cinema</li>
+    <li>  Address</li>
+    <li>  Directions from bus/train stations</li>
+    <li>  Parking</li>
+    <li>  Google/Bing map</li>
+  </ul>
+
+  <ul>
+    <b>Payment</b>
+    <li>The site should include a page dedicated to paying for tickets that are booked in advance.</li>
+    <li>Payment page should gather the following information:</li>
+    <li>Card holder’s name</li>
+    <li>Card number</li>
+    <li>Expiry date</li>
+    <li>Security code/CVC</li>
+    <li>Details should be saved and passed onto an external merchant for processing</li>
+  </ul>
+
+  </tab>
+
+  <tab heading="Requirements 4">
+    <ul>
+      <b>Discussion Board</b>
+    <li>  This page provides customers with the means to discuss movies and their experiences at the cinema.</li>
+    <li>  Page appears in the primary navigation</li>
+    <li>  Users can comment on movie related topics</li>
+    <li>  Users can rate films that they have seen</li>
+    <li>  Users’ posts should be moderated to ensure that inappropriate content is not displayed</li>
+    </ul>
+
+    <ul>
+      <b>Site Navigation</b>
+    <li>  As a site visitor unfamiliar with the siteI want to navigate to various areas of the site in a uniform and predictable mannerSo that I can find information I am interested in:</li>
+    <li>  Availability: The site navigation is present on all pages of the site.</li>
+    <li>  Uniformity: The site navigation appears identically on all pages that include it. </li>
+    </ul>
+
+    <ul>
+      <b>Search</b>
+    <li>  As a movie fan with specific knowledge of what I am looking for. I want a site feature that lets me search by keyword so that I can find the exact content I am interested in.</li>
+    <li>  Initial Search Text: Given the search box is renderedThen it has the words “Search Term” in itAnd the words are rendered in light gray</li>
+    <li>  Enter Search Term: Given the user clicks the search term box; When the mouse cursor is positioned inside the boxThen the words “Search Term” go away and are replaced by whatever the user types</li>
+    <li>  Results are Returned: Given I enter a search term in the search box. When I click the Search button. Then links to relevant content are returned in a list.</li>
+    </ul>
+
+    <ul>
+      <b>Email form</b>
+    <li>  As a site owner  I want an email form for visitors to use so that I do not expose my email address on the internet.</li>
+    <li>  Mandatory Subject: Given the subject is not filled in when the Submit button is clicked, then the user gets a message indicating that the subject is required.</li>
+    <li>  Email Format: Given the form is completely filled out when the Submit button is clicked, then each field from the email form is included in the resulting email sent to the recipient</li>
+    <li>  Valid Email Format: Given the user’s email is not in standard email address format when the Submit button is clicked, then the user gets a message indicating the email must be in a valid format.</li>
+
+    </ul>
+
+  </tab>
+</tabset>
+
+
+
+  </tab>
+  <tab heading="Team">
+    <button type="button" class="btn btn-info"
+        tooltip=".">
+  George Hardy
+</button>
+
+  <button type="button" class="btn btn-info"
+          tooltip=".">
+    Alex Salako
+  </button>
+
+  <button type="button" class="btn btn-info"
+          tooltip=".">
+     Roland Walet
+  </button>
+
+  <button type="button" class="btn btn-info"
+          tooltip=".">
+    Dan Smith
+  </button>
+
+  <button type="button" class="btn btn-info"
+          tooltip=".">
+    Mark Ledwold
+  </button>
+  </tab>
+  <tab heading="Technologies">
+    <br />
+      <button type="button" class="btn btn-info"
+        tooltip="Application front-end built up in components using Angular">
+        Angular 6
+      </button>
+
+      <button type="button" class="btn btn-info"
+        tooltip="Spring Boot implemented on the back end to facilitate back-end services">
+        Spring Boot
+      </button>
+
+      <button type="button" class="btn btn-info"
+        tooltip="SQlite implemented in order to create the Cinema database">
+        SQLite
+      </button>
+
+      <button type="button" class="btn btn-info"
+        tooltip="JavaScript used to develop functionality in front end components">
+        JavaScript
+      </button>
+
+      <button type="button" class="btn btn-info"
+        tooltip="TypeScript used to develop functionality in front end components">
+        TypeScript
+      </button>
+
+      <button type="button" class="btn btn-info"
+        tooltip="Java used to build out functionality in the back end" tooltipClass="bubble">
+        Java
+      </button>
+
+
+
+
+
+  </tab>
+  <tab heading="Agile">
+    <ul>
+
+
+      <h2>The project was organised using the Scrum process framework</h2>
+      <li>
+        User stories were extracted from the requirements and organised into a product backlog.
+      </li>
+      <li>
+        Work flow was organised using trello.
+      </li>
+      <li>
+        Achievable workload was assessed and tasks from the product backlog were decided on for a sprint and moved into the sprint backlog
+      </li>
+      <li>
+        Daily standup Scrum meetings were carried out each morning to inform the team what each member had done the previous day, what they were planning to do for the coming day and to voice any problems.
+      </li>
+      <li>
+        Each item from the sprint backlog was chosen by a member of the team at the beginning of a given day, and moved into the planning, then implementation section of the trello board.
+      </li>
+      <li>
+        Git/GitHub were used for version control and concurrent working. For each new feature a new branch was created and merged into the master on completion of the feature after review from another team member.
+      </li>
+</ul>
+  </tab>
+</tabset>
