progress to bookings

--- a/cinema-ui/src/app/components/booking/booking.component.html
+++ b/cinema-ui/src/app/components/booking/booking.component.html
@@ -20,15 +20,15 @@
     </p>
     <div>
       <label>Adults: </label>
-      <input type="number" formControlName="adultQuantity" value="0" min="0"/>
+      <input type="number" formControlName="adultQuantity" value="0" min="0" max="10" />
     </div>
     <div>
       <label>Concessions: </label>
-      <input type="number" formControlName="concessionQuantity" value="0" min="0"/>
+      <input type="number" formControlName="concessionQuantity" value="0" min="0" max="10" />
     </div>
     <div>
       <label>Child: </label>
-      <input type="number" formControlName="childQuantity" value="0" min="0" />
+      <input type="number" formControlName="childQuantity" value="0" min="0" max="10" />
     </div>
     <div>
       <input type="submit">
