--- a/cinema-ui/src/app/components/future-releases/future-releases.component.html
+++ b/cinema-ui/src/app/components/future-releases/future-releases.component.html
@@ -1,3 +1,15 @@
-<p>
-  future-releases works!
-</p>
+<h2>Coming Soon</h2>
+
+<div id="pageContent">
+  <div class="filmPoster" *ngFor="let film of this.films">
+   <img src="{{film.poster}}" />
+   <div>
+     <h3>{{film.title}}</h3> <br>
+     Showings from: {{film.releaseDate}} <br><br>
+     {{film.synopsis}} <br>
+     Directed by: {{film.director.name}} <br>
+
+   </div>
+
+  </div>
+</div>
