--- a/cinema-ui/src/app/components/booking/booking.component.html
+++ b/cinema-ui/src/app/components/booking/booking.component.html
@@ -32,6 +32,7 @@
     <div>
       <input type="submit" (click)="submitBooking()">
     </div>
+    <div id="paypal-button"></div>
   </div>
 
 <div [hidden]="bookingState">
@@ -45,4 +46,5 @@
     Concession Tickets : <span>{{this.booking.concessionTickets}}</span><br>
     Child Tickets : <span>{{this.booking.childTickets}}</span><br>
   </p>
+
 </div>
