--- a/cinema-ui/src/app/app.component.html
+++ b/cinema-ui/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <mat-toolbar>
   <mat-toolbar-row id="header">
-  <a [routerLink]="['/home']"><h1 style="font-size:2.5em"> QA Cinemas</h1></a>
+  <a [routerLink]="['/home']"><img src="../assets/logo/QALogo.Psy" /></a>
   </mat-toolbar-row>
   <mat-toolbar-row>
     <mat-card-content>
